Fixed bug #13092: Massuploader button is too small (Thanks to Steffen Gebert)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@6750 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/css/backend-style.css
+++ b/typo3/css/backend-style.css
@@ -314,7 +314,6 @@ Description : styles for the TYPO3 backend
 .swfupload {
 	display: block;
 	position: absolute;
-	width: 80px;
 	height: 22px;
 	z-index: 2000;
 }
